-switched launcher icons
-other minor changes

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,7 +8,7 @@
     
     
     <string name="welcome_text">Welcome to GeoTrack!\n
-        GeoTrack tracks user\'s movement and shows his\/her movement in handy ways.          
+        GeoTrack tracks user\'s movement and shows his/her movement in handy ways.          
         </string>    
     <string name="show_infotext">Show infotext</string>
     <string name="info_text">Welcome to GeoTrack!\n
